# ApeWorX-work

./: .gitignore  README.md
CTFs/Ethernaut/05-Token_DONE/: ape-config.yaml  pyproject.toml
CTFs/Ethernaut/05-Token_DONE/scripts/: attack.py
CTFs/Ethernaut/06-Delegation_DONE/: ape-config.yaml  pyproject.toml
CTFs/Ethernaut/06-Delegation_DONE/scripts/: attack.py
CTFs/Ethernaut/07-Force_DONE/: ape-config.yaml  pyproject.toml
CTFs/Ethernaut/07-Force_DONE/contracts/: AttackForce.sol
CTFs/Ethernaut/07-Force_DONE/scripts/: attack.py
CTFs/Ethernaut/08-Vault_DONE/: ape-config.yaml  pyproject.toml
CTFs/Ethernaut/08-Vault_DONE/contracts/: Vault.sol
CTFs/Ethernaut/08-Vault_DONE/scripts/: attack.py
CTFs/Ethernaut/09-King_DONE/: ape-config.yaml  pyproject.toml
CTFs/Ethernaut/09-King_DONE/contracts/: KingForever.sol
CTFs/Ethernaut/09-King_DONE/scripts/: attack.py
CTFs/Ethernaut/10-Re-Entrancy/: README.md
CTFs/Ethernaut/10-Re-Entrancy/.build/: __local__.json
CTFs/Ethernaut/10-Re-Entrancy_DONE/: ape-config.yaml  pyproject.toml
CTFs/Ethernaut/10-Re-Entrancy_DONE/.build/: __local__.json
CTFs/Ethernaut/10-Re-Entrancy_DONE/contracts/: Attack.sol
CTFs/Ethernaut/10-Re-Entrancy_DONE/scripts/: attack.py
CTFs/Ethernaut/11-Elevator_DONE/: README.md  ape-config.yaml  pyproject.toml
CTFs/Ethernaut/11-Elevator_DONE/.build/: __local__.json
CTFs/Ethernaut/11-Elevator_DONE/contracts/: Elevator.sol  ElevatorAttack.sol
CTFs/Ethernaut/11-Elevator_DONE/scripts/: attack.py
CTFs/Ethernaut/12-Privacy/: README.md  ape-config.yaml  pyproject.toml
CTFs/Ethernaut/12-Privacy/scripts/: attack.py
CTFs/Ethernaut/Coin_Flip_DONE/: .gitignore  pyproject.toml
CTFs/Ethernaut/Coin_Flip_DONE/contracts/: CoinFlip.sol
CTFs/Ethernaut/Coin_Flip_DONE/scripts/: attack.py  deploy.py
CTFs/Ethernaut/Delegation/: README.md  ape-config.yaml  pyproject.toml
CTFs/Ethernaut/Delegation/scripts/: attack.py
CTFs/Ethernaut/Delegation_DONE/: ape-config.yaml  pyproject.toml
CTFs/Ethernaut/Delegation_DONE/contracts/: Delegation.sol
CTFs/Ethernaut/Delegation_DONE/scripts/: attack.py  deploy.py  helper_functions.py
CTFs/Ethernaut/Fallback/: ape-config.yaml  pyproject.toml
CTFs/Ethernaut/Fallback/contracts/: Fallback.sol
CTFs/Ethernaut/Fallback/scripts/: attack.py  helper_functions.py
CTFs/Ethernaut/Fallback_DONE/: pyproject.toml
CTFs/Ethernaut/Fallback_DONE/scripts/: attack.py  deploy.py  helper_functions.py
CTFs/Ethernaut/Fallout_DONE/: ape-config.yaml  pyproject.toml
CTFs/Ethernaut/Fallout_DONE/contracts/: Fallout.sol
CTFs/Ethernaut/Fallout_DONE/scripts/: attack.py  deploy.py
CTFs/Ethernaut/Telephone_DONE/: ape-config.yaml  pyproject.toml
CTFs/Ethernaut/Telephone_DONE/contracts/: Attack.sol  Telephone.sol
CTFs/Ethernaut/Telephone_DONE/scripts/: attack.py  deploy.py  helper_functions.py
CTFs/quillctf/TemporaryVariable/: ape-config.yaml  pyproject.toml
Development/apeAccTest/: Dockerfile
Development/apeAccTest/test_contracts/: ape-config.yaml
Development/apeAccTest/test_contracts/scripts/: deploy_simple_storage.py  get_storage.py  helper_functions.py
Development/apeAccTest/test_contracts/tests/: test_acc.py
Development/simple_storage/: .env.example  README.md  ape-config.yaml
Development/simple_storage/scripts/: helper_functions.py
Development/simple_storage/tests/: confest.py
Development/simple_storage/tests/stating/: test_simple_storage.py
Development/simple_storage_poetry/: README.md  ape-config.yaml  pyproject.toml
Development/simple_storage_poetry/contracts/: SimpleStorage.sol
Development/simple_storage_poetry/scripts/: .web3_test.py.swp  deploy_simple_storage.py  helper_functions.py  web3_test.py
