[tool.poetry]
name = "simple-storage-poetry"
version = "0.1.0"
description = ""
authors = ["SAIKAT KARMAKAR <saikickkarma@gmail.com>"]
readme = "README.md"
packages = [{ include = "simple_storage_poetry" }]

[tool.poetry.dependencies]
python = "^3.10, <3.11"
eth-ape = "^0.6.8"
ape-alchemy = "^0.6.1"
ape-ganache = "^0.6.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
