[project]
name = "12-privacy"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Aviksaikat", email = "example@gmail.com" }
]
dependencies = [
    "eth-ape>=0.8.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

